# s3-manifest

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: docker-build-push.yml
scripts/: build-push.sh  deploy.sh  tag-release.sh  task_definition.json
src/: main.rs
