[package]
name = "s3-manifest"
version = "0.0.4"
edition = "2021"

[dependencies]
arrow = "52.2.0"
chrono = "0.4"
clap = { version = "3.1", features = ["derive"] }
futures = "0.3"
indicatif = "0.16"
parquet = "52.2.0"
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
tokio = { version = "1.0", features = ["full"] }
tokio-retry = "0.3"
url = "2.2.2"
